template.yml
apiVersion: v1
items:
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
    generation: 1
    labels:
      app: nexus
    name: nexus
  spec:
    replicas: 1
    selector:
      app: nexus
      deploymentconfig: nexus
    strategy:
      type: Rolling
    template:
      metadata:
        annotations:
        labels:
          app: nexus
          deploymentconfig: nexus
      spec:
        containers:
        - image: sonatype/nexus
          name: nexus
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
              - echo
              - ok
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          ports:
          - containerPort: 8081
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /nexus/content/groups/public
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /sonatype-work
            name: nexus-volume-1
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        terminationGracePeriodSeconds: 30
        volumes:
        - name: nexus-volume-1
          persistentVolumeClaim:
            claimName: nexus-pv
    test: false
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
    labels:
      app: nexus
    name: nexus
  spec:
    port:
      targetPort: 8081-tcp
    to:
      kind: Service
      name: nexus
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: nexus
    name: nexus
  spec:
    ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
    selector:
      app: nexus
      deploymentconfig: nexus
    sessionAffinity: None
    type: ClusterIP
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: nexus-pv
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 1G
kind: List
